node_modules.old2/node-stage/test/index.js
var stage = require('../');

// success
stage.success('this is a success message!');
// info
stage.info('this is a info message!');
// error
stage.error('this is a error message!');
// processing
stage.process('this is a process message!');
